Actualizar indexxiomarayalex.html

--- a/indexxiomarayalex.html
+++ b/indexxiomarayalex.html
@@ -3,10 +3,10 @@
 <title> frames </title> 
 </head> 
 <frameset rows="100,*"> 
-<frame id="frmsuperior" name="frmsuperior" src="file:///Users/macbook/Desktop/encabezado.html"/> 
+<frame id="frmsuperior" name="frmsuperior" src="encabezado.html"/> 
 <frameset cols="150,*"> 
-<frame id="frmizquierda" name="frmizquierda" src="file:///Users/macbook/Desktop/izquierdaalexyxiomara.html"/> 
-<frame id="frmcuerpo" name="frmcuerpo" src="file:///Users/macbook/Desktop/xiomarayalex.html"> 
+<frame id="frmizquierda" name="frmizquierda" src="/izquierdaalexyxiomara.html"/> 
+<frame id="frmcuerpo" name="frmcuerpo" src="xiomarayalex.html"> 
 </frameset> 
 <noframes> 
 <body> | 
