--- a/indexxiomarayalex.html
+++ b/indexxiomarayalex.html
@@ -5,7 +5,7 @@
 <frameset rows="100,*"> 
 <frame id="frmsuperior" name="frmsuperior" src="encabezado.html"/> 
 <frameset cols="150,*"> 
-<frame id="frmizquierda" name="frmizquierda" src="/izquierdaalexyxiomara.html"/> 
+<frame id="frmizquierda" name="frmizquierda" src="izquierdaalexyxiomara.html"/> 
 <frame id="frmcuerpo" name="frmcuerpo" src="xiomarayalex.html"> 
 </frameset> 
 <noframes> 
